# Execution-Tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.yml
doc/images/: exec-tracer-components.txt
doc/images/src/: exec-tracer-components.wsd  exec-tracer-seql.wsd
lib/: CMakeLists.txt
lib/include/: execution_tracer.h  execution_tracer_conf.h  execution_tracer_conf_template.h  execution_tracer_protocol.h
lib/src/: execution_tracer.c  execution_tracer_private.h
test/: test_common.c  test_get_and_put_common.c  test_get_and_put_overwrite_disabled.c  test_get_and_put_overwrite_enabled.c  test_log_dump_function.c  test_trace_functions.c
test/support/: execution_tracer_conf.h  helper_functions.c  helper_functions.h
tools/: exec_trace_parser.py  live_trace.py  parse-map-file.py  parse-svd.py  parse_map_file.py  parse_svd.py  trace_from_file.py  trace_from_ser_port.py
